[gd_scene load_steps=24 format=3 uid="uid://dhwj74og5vhbq"]

[ext_resource type="Script" uid="uid://c8mvylg0g5q2k" path="res://groups/scenes/main/main.gd" id="1_o5qli"]
[ext_resource type="Shader" uid="uid://4m3hepw1esri" path="res://groups/scenes/main/main.gdshader" id="2_0nixb"]
[ext_resource type="PackedScene" uid="uid://c1o7uc3soak4y" path="res://offline_progress_popup.tscn" id="3_ejerb"]
[ext_resource type="Texture2D" uid="uid://dice757twwqmb" path="res://Circle.png" id="3_s1l1a"]
[ext_resource type="PackedScene" uid="uid://duodi1u05b445" path="res://groups/hud/pause menu/pause_menu.tscn" id="3_u2crk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u2crk"]
shader = ExtResource("2_0nixb")

[sub_resource type="Gradient" id="Gradient_0nixb"]
colors = PackedColorArray(0.0723002, 0.322749, 0.313223, 1, 0.202367, 0.220611, 0.0103189, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0nixb"]
noise_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s1l1a"]
seamless = true
color_ramp = SubResource("Gradient_0nixb")
noise = SubResource("FastNoiseLite_0nixb")

[sub_resource type="CanvasTexture" id="CanvasTexture_ig7tw"]

[sub_resource type="Gradient" id="Gradient_0xm2m"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h2yge"]
gradient = SubResource("Gradient_0xm2m")

[sub_resource type="Curve" id="Curve_1bvp3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lquwl"]
curve = SubResource("Curve_1bvp3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7mycd"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 250.0
gravity = Vector3(0, 0, 0)
scale_min = 20.0
scale_max = 50.0
scale_curve = SubResource("CurveTexture_lquwl")
color_ramp = SubResource("GradientTexture1D_h2yge")

[sub_resource type="Gradient" id="Gradient_o5qli"]
colors = PackedColorArray(1, 0.843137, 0, 1, 1, 0.843137, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0wfyh"]
gradient = SubResource("Gradient_o5qli")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sugp2"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 300.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
scale_min = 50.0
scale_max = 100.0
scale_curve = SubResource("CurveTexture_lquwl")
color_ramp = SubResource("GradientTexture1D_0wfyh")

[sub_resource type="Animation" id="Animation_cqr6m"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(14.913, 15.1829), Vector2(30, 30.543)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-280, -319), Vector2(-561, -649)]
}

[sub_resource type="Animation" id="Animation_bcsxq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14.913, 15.1829)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-280, -319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdryv"]
_data = {
&"RESET": SubResource("Animation_bcsxq"),
&"pulse": SubResource("Animation_cqr6m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2crk"]
size = Vector2(1179, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejerb"]
size = Vector2(20, 464)

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_u2crk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -127.0
offset_right = 1273.0
offset_bottom = 676.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_s1l1a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HarmonyLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 13.0
offset_top = 13.0
offset_right = 181.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 30
text = "Harmony: 0"

[node name="FPSLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="SequenceLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40

[node name="CenterScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="KeypressParticles" type="GPUParticles2D" parent="CanvasLayer/CenterScreen"]
unique_name_in_owner = true
emitting = false
amount = 250
texture = SubResource("CanvasTexture_ig7tw")
lifetime = 0.8
one_shot = true
process_material = SubResource("ParticleProcessMaterial_7mycd")

[node name="ComboUnlockParticles" type="GPUParticles2D" parent="CanvasLayer/CenterScreen"]
unique_name_in_owner = true
emitting = false
amount = 500
texture = SubResource("CanvasTexture_ig7tw")
lifetime = 0.8
one_shot = true
process_material = SubResource("ParticleProcessMaterial_sugp2")

[node name="MetronomePulse" type="TextureRect" parent="CanvasLayer/CenterScreen"]
modulate = Color(1, 1, 1, 0.329412)
layout_mode = 0
offset_left = -280.0
offset_top = -319.0
offset_right = -240.0
offset_bottom = -279.0
scale = Vector2(14.913, 15.1829)
texture = ExtResource("3_s1l1a")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/CenterScreen/MetronomePulse"]
libraries = {
&"": SubResource("AnimationLibrary_qdryv")
}

[node name="UpgradesDisplay" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 836.0
offset_top = 25.0
offset_right = 876.0
offset_bottom = 65.0
theme_override_constants/separation = 20

[node name="OfflineProgressPopup" parent="CanvasLayer" instance=ExtResource("3_ejerb")]
unique_name_in_owner = true
visible = false

[node name="MasteryLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 7.0
offset_top = 147.0
offset_right = 47.0
offset_bottom = 170.0

[node name="PrestigeButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 176.0
offset_right = 162.0
offset_bottom = 207.0
text = "Perform Crescendo
"

[node name="ComboResetTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("3_u2crk")]
process_mode = 2
visible = false

[node name="WorldBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(574.5, 657)
shape = SubResource("RectangleShape2D_u2crk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(-10, 432)
shape = SubResource("RectangleShape2D_ejerb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(1162, 434)
shape = SubResource("RectangleShape2D_ejerb")

[connection signal="timeout" from="ComboResetTimer" to="." method="_on_combo_reset_timer_timeout"]
